@@ -950,7 +950,6 @@ modules/mux/mpjpeg.c
 modules/mux/ogg.c
 modules/mux/wav.c
 modules/notify/growl.m
-modules/notify/msn.c
 modules/notify/notify.c
 modules/notify/telepathy.c
 modules/packetizer/copy.c
